# lepinet

./: .gitignore  DEVELOPER.md  README.md  RESULTS.md  pyproject.toml
archive/: README.md
bash/: 011_ece copy.sh  011_ece.sh  011_test_ece.sh  011_train_ece.sh  011_train_ucloud.sh  012_test_ece.sh  012_test_ucloud.sh  012_test_ucloud_2.sh  014_nb_ece.sh  017_train_ece.sh  022_train_ece.sh  028_train_multihead_v4.sh  030_train_heads_benchmark.sh  031_run_muon_warmup.sh  README.md  chain_028_to_030.sh  queue_muon_after_series.sh  rsync_ucloud.sh
configs/: 20251030_1.yaml  20251031_1_ucloud.yaml  20251103_1.yaml  20251104_1_test.yaml  20251106_1_test_ece.yaml  20251106_2_test_ucloud.yaml  20251111_train_ece.yaml  20251112_train_ucloud.yaml  20251113_2_test_ucloud.yaml  20260707_train_heads_benchmark_small_autoregressive.yaml  20260707_train_heads_benchmark_small_hierarchical.yaml  20260707_train_heads_benchmark_small_independent.yaml  20260707_train_multihead_v4_small.yaml  20260708_heads_benchmark_global_independent.yaml  20260709_heads_global_autoregressive.yaml  20260709_heads_global_hierarchical.yaml  20260710_multihead_v4_global.yaml  20260710_test_global_hierarchical.yaml  20260710_test_global_independent.yaml  20260712_heads_global_independent_muon.yaml  20260713_heads_global_independent_muon_warmup.yaml  20260713_test_global_multihead_v4.yaml  20260714_heads_global_independent_muon_frontloaded.yaml  20260714_heads_global_independent_muon_onecycle.yaml  20260714_heads_global_independent_muon_onecycle_reg.yaml  20260714_test_global_independent_muon_onecycle.yaml  20260714_test_global_independent_muon_warmup.yaml  20260715_heads_global_independent_muon_10ep_logitadjust.yaml  20260715_heads_global_independent_muon_10ep_oversample.yaml  20260715_heads_global_independent_muon_onecycle_10ep.yaml  20260716_heads_global_independent_muon_5ep_logitadjust.yaml  20260716_heads_global_independent_muon_5ep_oversample.yaml  20260716_heads_global_independent_muon_onecycle_10ep_resume.yaml  20260716_test_global_independent_muon_5ep_logitadjust.yaml  20260716_test_global_independent_muon_5ep_oversample.yaml  20260716_test_global_independent_muon_onecycle_10ep.yaml  20260716_ucloud_onecycle_1ep.yaml  20260716_ucloud_onecycle_5ep.yaml  20260716_ucloud_onecycle_nocopy.yaml  20260716_ucloud_smoke_9717_onecycle.yaml  (+33 more)
dev/: 000_lepi_mini_training.ipynb  001_lepi_mini_predicting.ipynb  003_lepi_large_prod.py  004_flemming_formatting.ipynb  005_lepi_large_pred.py  005_pred.sh  006_flemming_eval.ipynb  007_ami_pipeline.ipynb  008_ami_pipeline.py  009_kavi_pipeline_integration.py  00_lepi_mini.ipynb  00_lepi_mini_training.ipynb  010_ucloud_vm.py  011_lepi_large_prod_v2.py  012_lepi_test.py  013_species_model_metrics_for_bratislava.ipynb  014_lepi_large_prod_v3.py  015_why_fastai_is_slow.ipynb  016_integrate_asgers_heads.ipynb  017_integration_asgers_heads.py  018_test_ami_model.ipynb  019_test_fastai_resnet50.ipynb  01_lepi_mini_predicting.ipynb  01_lepi_mini_results.ipynb  020_correct_flemming_dataset.ipynb  021_bioclip2.ipynb  022_lepi_large_prod_v3_multihead.py  023_select_subdataset.ipynb  024_lepi_test_multihead.py  025_integration_asger_heads_v2.py  026_tmp.ipynb  027_download_subdataset.py  028_lepi_hierarchical_multihead_v4.py  029_dl_global_lepy.py  02_lepi_mini_interpreting.ipynb  030_hierarchical_heads_benchmark.py  030_mini_trainer_flaws_summary.md  031_framework_climb_race.py  031_framework_comparison_report.md  032_hierarchical_heads_test.py  (+16 more)
journal/: 2026-07-autoregressive-fp16-instability.md  2026-07-does-longtail-help.md  2026-07-gpu-hang.md  2026-07-lepi-app-HANDOFF.md  2026-07-lepi-app-claude.md  2026-07-lepi-app-compression.md  2026-07-lepi-app.md  README.md  (+4 more)
(+42 files in other folders)
